# minecraft-launcher-launcher

./: Cargo.toml  README.md  check.sh  init_clippy_args.sh  release_build.sh  release_build_fast_and_install.sh  update_rust.sh
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: rust-clippy.yml
src/: main.rs  minecraft_launcher_launcher.rs  tests.rs  utils.rs
